--- a/_posts/2015-11-17-iOS面试题.md
+++ b/_posts/2015-11-17-iOS面试题.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "iOS面试题点集锦"
-description: ""
-category:lessons
+title: "iOS面试题一"
+description: "精选"
+category : lessons
 tags: []
 ---
 {% include JB/setup %}
+
 
 #iOS面试题点集锦
 ##第一部分
