--- a/_posts/2015-11-18-面试的自我总结.md
+++ b/_posts/2015-11-18-面试的自我总结.md
@@ -1,9 +1,9 @@
 ---
-layout:page
+layout:post
 title: "iOS面试题二"
 description: "精选"
 category : iOS
-tags: []
+tags: [1]
 ---
 {% include JB/setup %}
 #iOS面试题二
