--- a/_posts/2015-11-18-面试的自我总结.md
+++ b/_posts/2015-11-18-面试的自我总结.md
@@ -1,14 +1,14 @@
 ---
-layout:post
+layout: post
 title: "面试的自我总结"
-description: "精选"
-category : iOS
-tags: [1]
+description: ""
+category : lessons
+tags: []
 ---
 {% include JB/setup %}
 
 
-#iOS面试题二
+#面试的自我总结
 ###1、堆和栈的区别？
 答：管理方式：对于栈来讲，是由编译器自动管理的，无需我们手动控制；对于堆来说，释放工作由程序员控制，容易产生memory leak。
 
